<resources>
    <string name="app_name">Погода</string>
    <string name="weather_forecast_title">Прогноз погоды</string>
    <string name="temperature_format">%d°C</string>

    <string name="city_country_placeholder">Город, Страна</string>
    <string name="humidity_format">Влажность: %d%%</string>
    <string name="wind_speed_format">Скорость ветра: %.1f км/ч</string>
    <string name="pressure_format">Давление: %d гПа</string>
    <string name="weather_fetch_error">Не удалось загрузить данные о погоде: %s</string>
    <string name="city_search_hint">Введите город</string>

    <!-- Bottom Navigation -->
    <string name="weather">Погода</string>
    <string name="calculator">Калькулятор</string>
    <string name="list">Список</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="add_to_favorites">Добавить в избранное</string>

    <!-- Calculator -->
    <string name="calculator_result">0</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_equals">=</string>
    <string name="button_clear">C</string>
    <string name="button_dot">.</string>

    <!-- Calculator Errors -->
    <string name="calculator_error_empty_expression">Выражение пустое</string>
    <string name="calculator_error_division_by_zero">Деление на ноль</string>
    <string name="calculator_error_invalid_expression">Некорректное выражение</string>
    <string name="calculator_error_calculation_failed">Ошибка вычисления: %s</string>
    <string name="calculator_error_unknown">Неизвестная ошибка: %s</string>
    <string name="calculator_decimal_format">#.##########</string>
    <string name="todo">TODO</string>
</resources>
