<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/calculator_padding"
    android:background="?attr/colorOnPrimary"
    tools:context=".features.calculator.presentation.ui.CalculatorFragment">

    <!-- Дисплей -->
    <TextView
        android:id="@+id/displayTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/calculator_result"
        android:textSize="@dimen/calculator_display_text_size"
        android:textColor="@color/white"
        android:gravity="end|bottom"
        android:padding="@dimen/calculator_display_padding"
        android:background="@color/calculator_display_background"
        android:maxLines="2"
        android:ellipsize="end" />

    <!-- Кнопки калькулятора -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="4"
        android:rowCount="5">

        <!-- Строка 1: C и операторы -->
        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_clear"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_divide"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_multiply"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_minus"
            android:textSize="@dimen/calculator_button_text_size" />

        <!-- Строка 2: 7, 8, 9, + -->
        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_7"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_8"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_9"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_plus"
            android:textSize="@dimen/calculator_button_text_size" />

        <!-- Строка 3: 4, 5, 6 -->
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_4"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_5"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_6"
            android:textSize="@dimen/calculator_button_text_size" />

        <!-- Строка 4: 1, 2, 3, = (занимает 2 строки) -->
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_1"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_2"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_3"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="168dp"
            android:layout_columnWeight="1"
            android:layout_rowSpan="2"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_equals"
            android:textSize="24sp"
            android:backgroundTint="?attr/colorPrimary" />

        <!-- Строка 5: 0, . -->
        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_0"
            android:textSize="@dimen/calculator_button_text_size" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="@dimen/calculator_button_height"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/calculator_button_margin"
            android:text="@string/button_dot"
            android:textSize="@dimen/calculator_button_text_size" />

    </GridLayout>

</LinearLayout>
